crates/vexor-compiler/tests/golden/error/input/move_arity.vx
let c = Circle(10)
// too few arguments
let moved = move(50)(c)
export moved
